--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,20 @@
 version: "2.1"
 services:
-  []
+  clickhouse:
+    image: yandex/clickhouse-server:19.17.6.36
+    ports:
+      - "8123:8123"
+      - "9000:9000"
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    volumes:
+      - ${PWD}/test/fixtures/clickhouse/config/users.d/test-users.xml:/etc/clickhouse-server/users.d/test-users.xml
+      - ${PWD}/test/fixtures/clickhouse/logs:/var/log/clickhouse-server
+      - ${PWD}/test/fixtures/clickhouse/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+    healthcheck:
+      test: "clickhouse-client --port=9000 --query='SELECT 1'"
+      interval: 3s
+      timeout: 5s
+      retries: 20
