--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.40",
     "@apla/clickhouse": "^1.6.2",
     "@types/gapi": "^0.0.39",
     "@types/node": "^12.0.8",
@@ -25,8 +27,14 @@
     "config": "^3.1.0",
     "googleapis": "^52.1.0",
     "js-yaml": "^3.13.1",
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
+    "koa-oas3": "^0.13.1",
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mongodb": "^3.1.13",
     "node-yaml": "^3.2.0",
+    "swagger-combine": "^0.21.0",
     "ts-node": "^8.1.1"
   },
   "devDependencies": {
